<resources>
    <string name="app_name">navigation2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_bank">Banking</string>
    <string name="menu_finance">Finance</string>
    <string name="menu_pension">Pension</string>
    <string name="menu_notifications">Notifications</string>
    <string-array name="deparment">
        <item>Pension Sector</item>
        <item>Insurance Sector</item>
        <item>Banking Sector</item>
    </string-array>

</resources>
